--- a/app/src/main/res/layout/combo.xml
+++ b/app/src/main/res/layout/combo.xml
@@ -46,6 +46,11 @@
                 android:contentDescription="Detalles"
                 android:text="contenido" />
 
+            <TextView
+                android:id="@+id/txtprecio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <CheckBox
                 android:id="@+id/cbAdd"
                 android:layout_width="match_parent"
