--- a/app/src/main/res/layout/a_tu_gusto.xml
+++ b/app/src/main/res/layout/a_tu_gusto.xml
@@ -88,6 +88,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="precio:"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnPrincipal" />
@@ -98,6 +100,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="precio:"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnAcom" />
@@ -108,6 +112,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Precio:"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnBebida" />
