--- a/app/src/main/res/layout/resumen_compra.xml
+++ b/app/src/main/res/layout/resumen_compra.xml
@@ -82,4 +82,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtmonto" />
 
+    <TextView
+        android:id="@+id/txtusuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="255dp"
+        tools:layout_editor_absoluteY="140dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
