--- a/app/src/main/res/layout/resumen_compra.xml
+++ b/app/src/main/res/layout/resumen_compra.xml
@@ -62,8 +62,11 @@
         android:id="@+id/txtusuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="255dp"
-        tools:layout_editor_absoluteY="140dp" />
+        android:layout_marginTop="24dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/txtFecha"
